--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.0.4",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
@@ -16,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.9",
+    "react-toastify": "^7.0.3",
     "tailwindcss": "^2.0.2"
   }
 }
